Test absolute path

--- a/test.yml
+++ b/test.yml
@@ -5,4 +5,4 @@
   tasks:
     - ping:
     - shell: sleep 120
-    - include_vars: vars/vars.yml
+    - include_vars: /var/lib/awx/projects/_32__02558872/vars/vars.yml
