--- a/test_collections.yml
+++ b/test_collections.yml
@@ -2,6 +2,15 @@
 - hosts: all
   gather_facts: false
 
+  vars:
+    pause_seconds: 180
+
   tasks:
+    - pause:
+        seconds: "{{ pause_seconds }}"
+
     - ansible.posix.selinux:
         state: disabled
+
+    - pause:
+        seconds: "{{ pause_seconds }}"
