--- a/test_collections_nmcli.yml
+++ b/test_collections_nmcli.yml
@@ -1,7 +1,7 @@
 
 ---
-- hosts: openstack-stage
-  remote_user: root
+- hosts: all
+  gather_facts: false
   tasks:
 
   - name: Install needed network manager libs
