--- a/test_collections_nmcli.yml
+++ b/test_collections_nmcli.yml
@@ -8,6 +8,9 @@
     ansible.builtin.package:
       name:
         - NetworkManager-libnm
+        - nm-connection-editor
+        - libsemanage-python
+        - policycoreutils-python
       state: present
       
   - name: Add an Ethernet connection with static IP configuration
